<resources>
    <string name="app_name">iBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_text">Reading is a conversation. All\nbook\'s talk but a good book listens\nas well</string>
    <string name="email_address">Email Address</string>
    <string name="sign_in">Sign In</string>
    <string name="we_re_glad_to_have_you_back">We\'re glad to have you back</string>
    <string name="reginaldabiepepple_gmail_com">reginaldabiepepple@gmail.com</string>
    <string name="sparta7699">sparta7699</string>
    <string name="new_to_ibook"> New to iBook? </string>
    <string name="set_up_an_account"> Set up an account</string>
    <string name="there_s_a_lot_in_store_for_you">There\'s a lot in store for you</string>
    <string name="first_name">First Name</string>
    <string name="john">John</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="you_re_all_set">You\'re all set and ready to starting\nyour favourite books.</string>
</resources>