<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

   <ImageView
       android:id="@+id/i_book_logo"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/ibook"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       android:layout_marginTop="48dp"
       android:layout_marginHorizontal="48dp"/>


    <ImageView
        android:id="@+id/sign_in_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/sign_in_image"
        android:layout_marginTop="29dp"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintTop_toBottomOf="@id/i_book_logo"/>

    <ImageView
        android:id="@+id/transparent_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ibook_transparent"
        android:layout_margin="32dp"
        app:layout_constraintLeft_toLeftOf="@id/sign_in_image"
        app:layout_constraintBottom_toBottomOf="@id/sign_in_image"/>


        <TextView
            android:id="@+id/sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/text_Color"
            app:layout_constraintTop_toBottomOf="@id/sign_in_image"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="48dp"/>


    <TextView
        android:id="@+id/sign_in_salutation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/text_Color"
        android:text="@string/we_re_glad_to_have_you_back"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/sign_in_text"
        app:layout_constraintLeft_toLeftOf="@id/sign_in_text"/>


    <TextView
        android:id="@+id/sign_in_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/text_Color"
        android:text="@string/email_address"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/sign_in_salutation"
        app:layout_constraintLeft_toLeftOf="@id/sign_in_salutation"/>

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reginaldabiepepple_gmail_com"
        android:layout_marginHorizontal="48dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/sign_in_email_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/sign_in_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/text_Color"
        android:text="Password"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text"
        app:layout_constraintLeft_toLeftOf="@id/email_edit_text"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sparta7699"
        android:layout_marginHorizontal="48dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/sign_in_password_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <ImageView
        android:id="@+id/visibility_gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/password_visibility"
        app:layout_constraintRight_toRightOf="@id/password_edit_text"
        app:layout_constraintBottom_toBottomOf="@id/password_edit_text"
        app:layout_constraintTop_toTopOf="@id/password_edit_text"
        android:layout_marginHorizontal="5dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign In"
        android:background="@color/purple_500"
        android:layout_marginHorizontal="49dp"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/new_to_iBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_to_ibook"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="60dp"
        android:paddingBottom="60dp"
        app:layout_constraintTop_toBottomOf="@id/signInButton"
        app:layout_constraintRight_toLeftOf="@id/guidelineTextView"/>

        <TextView
            android:id="@+id/guidelineTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
        android:id="@+id/setUpAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_up_an_account"
        android:textStyle="bold"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="60dp"
        android:textColor="@color/text_Color"
        android:paddingBottom="60dp"
        app:layout_constraintLeft_toRightOf="@id/guidelineTextView"
        app:layout_constraintTop_toBottomOf="@id/signInButton"/>





</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>